feat(tools): Use Github Actions instead of Travis

--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -10,10 +10,10 @@
     "test": "run-s test:unit",
     "test:unit": "vue-cli-service test:unit --config=./jest.config.js",
     "test:image-snapshots": "run-s build-storybook build-image-snapshots",
-    "lint": "run-s lint:js lint:styles",
+    "lint": "run-p lint:js lint:styles",
     "lint:js": "vue-cli-service lint",
     "lint:styles": "stylelint **/*.scss",
-    "build": "run-s clean:dist build:wc build:lib build:theme",
+    "build": "run-p clean:dist build:wc build:lib build:theme",
     "build:wc": "vue-cli-service build --target wc-async --name recomponents 'src/**/*.vue' --no-clean",
     "build:lib": "vue-cli-service build --target lib --name recomponents 'src/index.js' --no-clean",
     "build:theme": "node-sass src/styles/recomm.scss dist/recomm.css",
