--- a/.github/workflows/recomponents.yml
+++ b/.github/workflows/recomponents.yml
@@ -137,6 +137,8 @@ jobs:
         node-version: [12.x]
     env:
       NODE_ENV: test
+      NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
     - name: Checkout
       uses: actions/checkout@master
