--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -10,7 +10,7 @@
     "test": "run-s test:unit",
     "test:unit": "vue-cli-service test:unit --config=./jest.config.js",
     "test:image-snapshots": "run-s build-storybook build-image-snapshots",
-    "lint": "run-p lint:js lint:styles",
+    "lint": "run-s lint:js lint:styles",
     "lint:js": "vue-cli-service lint",
     "lint:styles": "stylelint **/*.scss",
     "build": "run-s clean:dist build:wc build:lib build:theme",
