fix(tools): Fix multiple issues with build

--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -2,20 +2,20 @@
   "name": "@rebilly/recomponents",
   "version": "1.0.0",
   "description": "Official Rebilly front-end components library",
-  "main": "dist/recomponents.common.js",
+  "main": "dist/recomponents.umd.js",
   "unpkg": "dist/recomponents.umd.js",
   "author": "Rebilly SRL",
   "license": "MIT",
   "scripts": {
-    "test": "run-s test:unit",
+    "test": "run-p test:unit",
     "test:unit": "vue-cli-service test:unit --config=./jest.config.js",
     "test:image-snapshots": "run-s build-storybook build-image-snapshots",
     "lint": "run-s lint:js lint:styles",
     "lint:js": "vue-cli-service lint",
     "lint:styles": "stylelint **/*.scss",
     "build": "run-s clean:dist build:wc build:lib build:theme",
-    "build:wc": "vue-cli-service build --target wc-async --name recomponents 'src/**/*.vue' --no-clean",
-    "build:lib": "vue-cli-service build --target lib --name recomponents 'src/index.js' --no-clean",
+    "build:wc": "vue-cli-service build --target wc-async --name recomponents 'src/**/*.vue' --no-clean --mode production",
+    "build:lib": "vue-cli-service build --target lib --name recomponents 'src/index.js' --no-clean --mode production",
     "build:theme": "node-sass src/styles/recomm.scss dist/recomm.css",
     "dev": "vue-cli-service build --target lib --name recomponents 'src/index.js' --no-clean --watch --mode production",
     "clean:dist": "rimraf ./dist/**/*",
@@ -79,11 +79,11 @@
     "@storybook/addon-storysource": "^5.3.14",
     "@storybook/vue": "^5.3.14",
     "@vue/babel-preset-app": "^4.1.1",
-    "@vue/cli": "^4.1.2",
-    "@vue/cli-plugin-babel": "^4.1.2",
-    "@vue/cli-plugin-eslint": "^4.1.2",
-    "@vue/cli-plugin-unit-jest": "^4.1.2",
-    "@vue/cli-service": "^4.1.2",
+    "@vue/cli": "^4.2.3",
+    "@vue/cli-plugin-babel": "^4.2.3",
+    "@vue/cli-plugin-eslint": "^4.2.3",
+    "@vue/cli-plugin-unit-jest": "^4.2.3",
+    "@vue/cli-service": "^4.2.3",
     "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/server-test-utils": "^1.0.0-beta.31",
     "@vue/test-utils": "^1.0.0-beta.31",
@@ -128,5 +128,6 @@
   },
   "peerDependencies": {
     "vue": "^2.6.0"
-  }
+  },
+  "sideEffects": true
 }
