--- a/.github/workflows/recomponents.yml
+++ b/.github/workflows/recomponents.yml
@@ -122,9 +122,8 @@ jobs:
         path: ./
     - name: Uncompress Recomponents build
       run: |
-        unzip recomponents.zip -d packages/nuxt/dist
-        unzip recomponents.zip -d packages/gridsome/dist
-        unzip recomponents.zip -d packages/recomponents/dist
+        unzip -o recomponents.zip -d packages/nuxt/node_modules/@rebilly/recomponents/dist
+        unzip -o recomponents.zip -d packages/gridsome/node_modules/@rebilly/recomponents/dist
     - name: Build Nuxt application
       run: |
         yarn workspace recomponents-demo-nuxt build
