--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -47,10 +47,10 @@
   "dependencies": {
     "approximate-number": "^2.0.0",
     "css-vars-ponyfill": "^2.1.2",
-    "cz-conventional-changelog": "^3.1.0",
     "intersection-observer": "^0.7.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.kebabcase": "^4.1.1",
+    "lowlight": "^1.13.1",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
     "shortid": "^2.2.14",
@@ -99,6 +99,7 @@
     "babel7-jest": "^1.0.1",
     "core-js": "^3.4.3",
     "cross-env": "^6.0.3",
+    "cz-conventional-changelog": "^3.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "jest": "^24.8.0",
