--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -54,7 +54,8 @@
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
     "shortid": "^2.2.14",
-    "v-calendar": "^0.9.7"
+    "v-calendar": "^2.0.0",
+    "@popperjs/core": "^2.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
