--- a/package.json
+++ b/package.json
@@ -24,5 +24,17 @@
   },
   "scripts": {
     "semantic-release": "semantic-release"
+  },
+  "resolutions": {
+    "@npmcli/git": "^2.0.8",
+    "browserslist": "^4.16.5",
+    "glob-parent": "^5.1.2",
+    "hosted-git-info": "^3.0.8",
+    "merge": "^2.1.1",
+    "ssri": "^7.1.1",
+    "tar": "^6.1.2",
+    "trim": "^0.0.3",
+    "trim-newlines": "^3.0.1",
+    "ws": "^7.4.6"
   }
 }
