--- a/.github/workflows/recomponents.yml
+++ b/.github/workflows/recomponents.yml
@@ -1,7 +1,7 @@
 name: Pull Request
 on:
   push:
-    branches: [master]
+    branches: [main]
   pull_request:
     types: [assigned, opened, synchronize, reopened]
 jobs:
