fix: migrate from shortid to nanoid
Shortid is deprecated and is a security threat. Replace it with Nanoid.

fix #272

--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -54,7 +54,7 @@
     "lowlight": "^1.13.1",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.23",
-    "shortid": "^2.2.14",
+    "nanoid": "^3.1.25",
     "v-calendar": "^2.0.0"
   },
   "devDependencies": {
