--- a/.github/workflows/recomponents.yml
+++ b/.github/workflows/recomponents.yml
@@ -99,7 +99,7 @@ jobs:
   release:
     name: Semantic release
     runs-on: ubuntu-latest
-    needs: [compile, test, snapshot, ssr]
+    needs: [compile, test, snapshot]
     strategy:
       matrix:
         node-version: [12.x]
