--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -111,6 +111,7 @@
     "jest-serializer-html": "^7.0.0",
     "jest-serializer-vue": "^2.0.2",
     "markdown-loader-jest": "^0.1.1",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
     "puppeteer": "^2.0.0",
