--- a/packages/recomponents/package.json
+++ b/packages/recomponents/package.json
@@ -2,8 +2,8 @@
   "name": "@rebilly/recomponents",
   "version": "1.0.0",
   "description": "Official Rebilly front-end components library",
-  "main": "dist/recomponents.umd.js",
-  "unpkg": "dist/recomponents.umd.js",
+  "main": "dist/recomponents.umd.min.js",
+  "unpkg": "dist/recomponents.umd.min.js",
   "author": "Rebilly SRL",
   "license": "MIT",
   "scripts": {
@@ -16,7 +16,7 @@
     "build": "run-s clean:dist build:wc build:lib build:theme",
     "build:wc": "vue-cli-service build --target wc-async --name recomponents 'src/**/*.vue' --no-clean --mode production",
     "build:lib": "vue-cli-service build --target lib --name recomponents 'src/index.js' --no-clean --mode production",
-    "build:theme": "node-sass src/styles/recomm.scss dist/recomm.css",
+    "build:theme": "sass src/styles/recomm.scss dist/recomm.css",
     "dev": "vue-cli-service build --target lib --name recomponents 'src/index.js' --no-clean --watch --mode production",
     "clean:dist": "rimraf ./dist/**/*",
     "storybook": "start-storybook -p 9001  -s ./public",
@@ -111,11 +111,12 @@
     "jest-serializer-html": "^7.0.0",
     "jest-serializer-vue": "^2.0.2",
     "markdown-loader-jest": "^0.1.1",
-    "node-sass": "^4.13.0",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "npm-run-all": "^4.1.5",
     "puppeteer": "^2.0.0",
     "rimraf": "^3.0.0",
-    "sass-loader": "^8.0.0",
+    "sass": "^1.54.5",
+    "sass-loader": "^10",
     "semantic-release": "^17.2.3",
     "storybook-vue-router": "^1.0.7",
     "style-loader": "^1.0.1",
